# hello-github-actions

./: .gitignore  Dockerfile  README.md  db.sqlite3  pyproject.toml  q
.github/workflows/: build-and-deploy.yml  main.yml  release.yml
demo_app/: urls.py  views.py
mysite/: settings.py  urls.py
workflows/: main.yml
