[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example-package-teppei-matsuoka-here"
version = "0.1.0"
description = "Example package for GitHub Actions demo"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "asera1-bot" }]
license = { text = "MIT" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
